--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <h1 style="background-color: blue;text-align: center;">Bibek debnath</h1>
+    <h1 style="background-color: blue;text-align: center;">Joonmoni kakoty</h1>
 
 </body>
 
